--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Horizontally Scrolling Site from CSS-Tricks</title>
+	<title>Marisa Turns in Assignments</title>
 
 	<link rel="stylesheet" href="style.css">
 
